<resources>
    <string name="app_name">Did I Pay</string>
    <string name="item_last_month_paid_text">Last pay at:</string>
    <string name="item_checkbox_paid_text">Paid</string>
    <string name="new_item_activity_title">New Item</string>
    <string name="new_item_name_hint">Name</string>
    <string name="new_item_detail_hint">Details</string>
    <string name="new_item_last_month_label">Last month paid</string>
    <string name="new_item_type_label">Category</string>
    <string name="new_item_btn_save">Save</string>
    <string name="new_item_btn_cancel">Cancel</string>
    <string name="delete_item_dialog_title">Delete Item</string>
    <string name="delete_item_dialog_description">Do you want to delete this item?</string>
    <string name="delete_item_dialog_btn_delete">Delete</string>
    <string name="delete_item_dialog_btn_cancel">Cancel</string>
    <string name="input_required_text">Required</string>
    <string-array name="meses">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="category_item_credit_card">Credit Card</string>
    <string name="category_item_phone">Phone Bill</string>
    <string name="category_item_club">Club / Sports</string>
    <string name="category_item_other">Other</string>
    <string name="category_item_gym">Gym</string>
    <string name="category_item_electric">Electric Bill</string>
    <string name="category_item_loan">Loan</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_settings">Settings</string>

    <!-- Example pref_main for Notifications -->
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_expired_item">Item deadline notification</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_summary_vibrate">Vibrate on new notification</string>

    <!--<string name="summary_choose_ringtone">Choose notification sound</string>-->
    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <!--<string name="pref_ringtone_silent">Silent</string>-->

    <string name="pref_header_about">About</string>
    <!--<string name="summary_support">Got any queries? We are happy to help!</string>-->
    <!--<string name="title_send_feedback">Send Feedback</string>-->
    <string name="title_version">Version</string>

    <!-- settings keys -->
    <string name="key_notifications_expired_item">key_notifications_expired_item</string>
    <string name="key_vibrate">key_vibrate</string>
</resources>
