<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_notifications_expired_item"
            android:title="@string/pref_title_expired_item" />

        <!--<RingtonePreference-->
            <!--android:defaultValue="content://settings/system/notification_sound"-->
            <!--android:dependency="key_notifications_expired_item"-->
            <!--android:key="@string/key_notifications_new_message_ringtone"-->
            <!--android:ringtoneType="notification"-->
            <!--android:summary="@string/summary_choose_ringtone"-->
            <!--android:title="@string/pref_title_ringtone" />-->

        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="@string/key_vibrate"-->
            <!--android:summary="@string/summary_vibrate"-->
            <!--android:title="@string/title_vibrate" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />
    </PreferenceCategory>
</PreferenceScreen>