<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/new_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_item_name_hint"
        android:inputType="text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/new_item_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_item_detail_hint"
        android:inputType="text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textViewUltMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_item_last_month_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/new_item_spinner_months"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/meses"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textViewCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_item_type_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <Spinner
        android:id="@+id/new_item_spinner_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/item_types"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/new_item_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="cancelSave"
            android:text="@string/new_item_btn_cancel" />

        <Button
            android:id="@+id/new_item_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="saveItem"
            android:text="@string/new_item_btn_save"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>