<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditItemActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_edit_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_item_name_hint"
            android:inputType="textCapSentences"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_edit_item_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_edit_item_name">

        <EditText
            android:id="@+id/edit_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_item_detail_hint"
            android:inputType="textCapSentences"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textViewUltMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_item_last_month_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_edit_item_detail" />

    <Spinner
        android:id="@+id/edit_item_spinner_months"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/meses"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUltMes" />

    <TextView
        android:id="@+id/textViewCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_item_type_label"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_spinner_months" />

    <Spinner
        android:id="@+id/edit_item_spinner_types"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategories" />


    <Button
        android:id="@+id/edit_item_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="cancelSave"
        android:text="@string/new_item_btn_cancel"
        android:theme="@style/AppTheme.Button.Cancel"
        app:layout_constraintEnd_toStartOf="@+id/edit_item_save"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_item_spinner_types" />

    <Button
        android:id="@+id/edit_item_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="saveItem"
        android:text="@string/new_item_btn_save"
        android:textColor="@android:color/background_light"
        android:theme="@style/AppTheme.Button.Primary"
        app:layout_constraintBottom_toBottomOf="@+id/edit_item_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_item_cancel"
        app:layout_constraintTop_toTopOf="@+id/edit_item_cancel" />


</android.support.constraint.ConstraintLayout>